--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/main.css">
     <!-- 외부JS 연결 -->
-    <script src="./js/auto_scroll_main.js" type="module"></script>
+    <!-- <script src="./js/auto_scroll_main.js" type="module"></script> -->
   </head>
   <body>
     <!-- 1. 상단영역 : 고정메뉴 -->
@@ -16,8 +16,8 @@
       <header class="inbox header">
         <!-- 1-1.로고 -->
         <h1 id="logo">
-          <a href="#">
-            <img src="images/auto_scroll/logo.png" alt="메가박스로고" />
+          <a href="/">
+           GIEYOUNG'S PORTFOLIO
           </a>
         </h1>
         <!-- 1-2.GNB메뉴 -->
